// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Download page renders correctly 1`] = `
<div>
  <div
    class="layout-container"
  >
    <nav
      aria-label="Primary"
      class="nav"
    >
      <div
        class="nav__container"
      >
        <div
          class="nav__startwrapper"
        >
          <a
            aria-label="Homepage"
            href="/"
          >
            <div
              class="logo"
            >
              <svg
                class="nav__logo light-mode-only"
              />
              <svg
                class="nav__logo dark-mode-only"
              />
            </div>
          </a>
        </div>
        <ul
          class="nav__tabs__container"
        >
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="/learn"
            >
              Learn
            </a>
          </li>
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="https://nodejs.org/en/docs/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Documentation
            </a>
          </li>
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="/download"
            >
              Download
            </a>
          </li>
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="/community"
            >
              Community
            </a>
          </li>
        </ul>
        <div
          class="nav__endwrapper"
        >
          <ul
            class="right-container"
          >
            <li
              class="nav__tabs"
            >
              <div
                class="searchBarContainer"
                style="min-height: 3em; width: 100%; max-width: 7em; box-shadow: none;"
              >
                <div
                  class="searchInputContainer"
                >
                  <i
                    class="material-icons searchIcon"
                  >
                    search
                  </i>
                  <label
                    for="searchInput"
                  >
                    Search
                    <input
                      autocomplete="off"
                      class="inputText"
                      id="searchInput"
                      name="query"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
              </div>
            </li>
            <li
              class="nav__tabs nav__tabs--right"
            >
              <button
                class="dark-mode-toggle"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  Toggle Dark Mode
                </span>
                <i
                  class="material-icons light-mode-only theme-buttons"
                >
                  nights_stay
                </i>
                <i
                  class="material-icons dark-mode-only theme-buttons"
                >
                  wb_sunny
                </i>
              </button>
            </li>
            <li
              class="nav__tabs"
            >
              <a
                href="https://github.com/nodejs/nodejs.dev"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="sr-only"
                >
                  GitHub
                </span>
                <svg
                  fill="var(--color-text-accent)"
                  style="margin-bottom: -3px;"
                />
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <span
      class="home-page -download"
    >
      <div
        class="download-page__navigation"
      >
        <div>
          HOME /
          <span
            class="download-page__navigation--active"
          >
             downloads
          </span>
        </div>
        <div>
          LATEST LTS
           VERSION 
          mock-version-1
        </div>
      </div>
      <div
        class="download-page__navigation"
      >
        <div
          class="download-page__navigation--title"
        >
          Downloads
        </div>
        <div
          class="download-page__navigation--npm"
        >
          (includes npm 
          mock-npm
          )
        </div>
      </div>
      <p
        class="release-description"
      >
        Download the Node.js source code, a pre-built installer for your platform, or install via
         
        <a
          href="/download/package-manager"
        >
          package manager
        </a>
        .
      </p>
      <div
        class="download-toogle"
      >
        <div
          class="download-toogle__selector"
        >
          <div
            class="download-toogle__switch"
          >
            <button
              aria-checked="true"
              aria-label="Show LTS versions"
              class="download-toogle__button -active"
              role="switch"
              type="button"
            >
              LTS
            </button>
            <button
              aria-checked="true"
              aria-label="Show LTS versions"
              class="download-toogle__button -current"
              role="switch"
              type="button"
            >
              Current
            </button>
          </div>
        </div>
        <p
          class="download-toogle__description"
        >
          Recommended for most users
        </p>
      </div>
      <div
        class="download-cards-wrapper"
        data-rttabs="true"
        tabindex="-1"
      >
        <ul
          class="download-cards"
          role="tablist"
        >
          <li
            aria-controls="paneldownload-card-WIN"
            aria-disabled="false"
            aria-selected="false"
            class="download-card"
            data-rttab="true"
            id="tabdownload-card-WIN"
            role="tab"
            tabindex="0"
          >
            <div
              class="download-card__top"
            >
              <svg
                class="download-card__image"
              />
            </div>
            <p
              class="download-card__label"
            >
              Windows Installer
            </p>
            <p
              class="download-card__filename"
            >
              node-mock-version-1-x86.msi
            </p>
          </li>
          <li
            aria-controls="paneldownload-card-MAC"
            aria-disabled="false"
            aria-selected="false"
            class="download-card"
            data-rttab="true"
            id="tabdownload-card-MAC"
            role="tab"
            tabindex="0"
          >
            <div
              class="download-card__top"
            >
              <svg
                class="download-card__image"
              />
            </div>
            <p
              class="download-card__label"
            >
              MAC Installer
            </p>
            <p
              class="download-card__filename"
            >
              node-mock-version-1.pkg
            </p>
          </li>
          <li
            aria-controls="paneldownload-card-SOURCECODE"
            aria-disabled="false"
            aria-selected="false"
            class="download-card download-card--active"
            data-rttab="true"
            id="tabdownload-card-SOURCECODE"
            role="tab"
            tabindex="0"
          >
            <div
              class="download-card__top"
            >
              <svg
                class="download-card__image"
              />
              <a
                class="download-card__link"
                href="https://nodejs.org/dist/mock-version-1/node-mock-version-1.tar.gz"
              >
                <i
                  class="material-icons"
                >
                  get_app
                </i>
              </a>
            </div>
            <p
              class="download-card__label"
            >
              Source Code
            </p>
            <p
              class="download-card__filename"
            >
              node-mock-version-1.tar.gz
            </p>
          </li>
        </ul>
      </div>
      <div
        class="download-releases"
      >
        <h2
          class="download-releases__title"
        >
          Upcoming Releases
        </h2>
        <div
          class="upcoming-releases"
        >
          <div
            class="react-tabs"
            data-rttabs="true"
          >
            <ul
              class="react-tabs__tab-list"
              role="tablist"
            >
              <li
                aria-controls="panel:r1:0"
                aria-disabled="false"
                aria-selected="true"
                class="react-tabs__tab react-tabs__tab--selected"
                data-rttab="true"
                id="tab:r1:0"
                role="tab"
                tabindex="0"
              >
                Node.js 
                v12
              </li>
              <li
                aria-controls="panel:r1:1"
                aria-disabled="false"
                aria-selected="false"
                class="react-tabs__tab"
                data-rttab="true"
                id="tab:r1:1"
                role="tab"
              >
                Node.js 
                v14
              </li>
            </ul>
            <div
              aria-labelledby="tab:r1:0"
              class="react-tabs__tab-panel react-tabs__tab-panel--selected"
              id="panel:r1:0"
              role="tabpanel"
            >
              <div
                class="upcoming-releases__panel"
              >
                <div
                  class="upcoming-releases__item--Current"
                >
                  <svg />
                  <p
                    class="release-title"
                  >
                    Current
                  </p>
                  <p
                    class="release-date"
                  >
                    Released
                     
                    2019-04-23
                  </p>
                </div>
                <div
                  class="upcoming-releases__item--LTS"
                >
                  <svg />
                  <p
                    class="release-title"
                  >
                    LTS
                  </p>
                  <p
                    class="release-date"
                  >
                    Released
                     
                    2019-10-21
                  </p>
                </div>
                <div
                  class="upcoming-releases__item--Maintenance"
                >
                  <svg />
                  <p
                    class="release-title"
                  >
                    Maintenance
                  </p>
                  <p
                    class="release-date"
                  >
                    Released
                     
                    2020-11-30
                  </p>
                </div>
                <div
                  class="upcoming-releases__item--End-of-life"
                >
                  <svg />
                  <p
                    class="release-title"
                  >
                    End-of-life
                  </p>
                  <p
                    class="release-date"
                  >
                    Released
                     
                    2022-04-30
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="tab:r1:1"
              class="react-tabs__tab-panel"
              id="panel:r1:1"
              role="tabpanel"
            />
          </div>
        </div>
        <p
          class="lts__text"
        >
          Major Node.js versions enter Current release status for six months, which gives library authors time to add support for them. After six months, odd-numbered releases (9, 11, etc.) become unsupported, and even-numbered releases (10, 12, etc.) move to Active LTS status and are ready for general use. LTS release status is "long-term support", which typically guarantees that critical bugs will be fixed for a total of 30 months. Production applications should only use Active LTS or Maintenance LTS releases.
        </p>
        <div
          class="downloads-table-container"
        >
          <table
            class="downloads-table"
          >
            <thead>
              <tr>
                <th>
                  Release
                </th>
                <th>
                  Status
                </th>
                <th>
                  Codename
                </th>
                <th>
                  Initial Release
                </th>
                <th>
                  Active LTS Start
                </th>
                <th>
                  Maintenance LTS Start
                </th>
                <th>
                  End of Life
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  <a
                    href="https://nodejs.org/download/release/latest-v12.x/"
                  >
                    v12
                  </a>
                </td>
                <td>
                  Maintenance LTS
                </td>
                <td>
                  <a
                    href="https://nodejs.org/download/release/latest-erbium/"
                  >
                    Erbium
                  </a>
                </td>
                <td>
                  2019-04-23
                </td>
                <td>
                  2019-10-21
                </td>
                <td>
                  2020-11-30
                </td>
                <td>
                  2022-04-30
                </td>
              </tr>
              <tr>
                <td>
                  <a
                    href="https://nodejs.org/download/release/latest-v14.x/"
                  >
                    v14
                  </a>
                </td>
                <td>
                  Active LTS
                </td>
                <td>
                  <a
                    href="https://nodejs.org/download/release/latest-fermium/"
                  >
                    Fermium
                  </a>
                </td>
                <td>
                  2020-04-21
                </td>
                <td>
                  2020-10-27
                </td>
                <td>
                  2021-10-19
                </td>
                <td>
                  2023-04-30
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="download-additional"
      >
        <div
          class="download-additional__header"
        >
          <h3
            class="download-additional__title"
          >
            Additional Downloads
          </h3>
          <div
            class="download-toogle"
          >
            <div
              class="download-toogle__selector"
            >
              <div
                class="download-toogle__switch"
              >
                <button
                  aria-checked="true"
                  aria-label="Show LTS versions"
                  class="download-toogle__button -active"
                  role="switch"
                  type="button"
                >
                  LTS
                </button>
                <button
                  aria-checked="true"
                  aria-label="Show LTS versions"
                  class="download-toogle__button -current"
                  role="switch"
                  type="button"
                >
                  Current
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="download-additional__body"
        >
          <div
            class="download-additional__item"
            role="button"
            tabindex="0"
          >
            <div
              class="download-additional__item__header"
            >
              <div
                class="download-additional__item__header__arrow"
              >
                <div
                  class="download-additional__item__header__arrow__right"
                />
              </div>
              Windows Installer (.msi)
            </div>
          </div>
          <div
            class="download-additional__item"
            role="button"
            tabindex="0"
          >
            <div
              class="download-additional__item__header"
            >
              <div
                class="download-additional__item__header__arrow"
              >
                <div
                  class="download-additional__item__header__arrow__right"
                />
              </div>
              Windows Binary (.zip)
            </div>
          </div>
          <div
            class="download-additional__item"
            role="button"
            tabindex="0"
          >
            <div
              class="download-additional__item__header"
            >
              <div
                class="download-additional__item__header__arrow"
              >
                <div
                  class="download-additional__item__header__arrow__right"
                />
              </div>
              macOS Installer (.pkg)
            </div>
          </div>
          <div
            class="download-additional__item"
            role="button"
            tabindex="0"
          >
            <div
              class="download-additional__item__header"
            >
              <div
                class="download-additional__item__header__arrow"
              >
                <div
                  class="download-additional__item__header__arrow__right"
                />
              </div>
              macOS Binary (.tar.gz)
            </div>
          </div>
          <div
            class="download-additional__item"
            role="button"
            tabindex="0"
          >
            <div
              class="download-additional__item__header"
            >
              <div
                class="download-additional__item__header__arrow"
              >
                <div
                  class="download-additional__item__header__arrow__right"
                />
              </div>
              Linux (PPC, S390x, AIX, ARMv7, ARMv8)
            </div>
          </div>
        </div>
      </div>
    </span>
    <footer
      class="footer"
    >
      <ul
        class="footer__left"
      >
        <li>
          <a
            class="footer__link"
            href="/about/trademark"
          >
            Trademark Policy
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="/about/privacy"
          >
            Privacy Policy
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="https://github.com/openjs-foundation/cross-project-council/blob/main/CODE_OF_CONDUCT.md#contributor-covenant-code-of-conduct"
          >
            Code of Conduct
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="/about/security"
          >
            Security Reporting
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="/about"
          >
            About
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="https://nodejs.org/en/blog/"
          >
            Blog
          </a>
        </li>
      </ul>
      <ul
        class="footer__right"
      >
        <li>
          © OpenJS Foundation
        </li>
        <li>
          <a
            aria-label="Node.js Github Page Link"
            href="https://github.com/nodejs/node"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="sr-only"
            >
              GitHub
            </span>
            <svg
              fill="var(--color-text-secondary)"
            />
          </a>
        </li>
        <li>
          <a
            aria-label="Node.js Twitter Link"
            href="https://twitter.com/nodejs"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              fill="var(--color-text-secondary)"
            />
          </a>
        </li>
        <li>
          <a
            aria-label="Node.js Slack Link"
            href="https://slack.openjsf.org"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              fill="var(--color-text-secondary)"
            />
          </a>
        </li>
      </ul>
    </footer>
  </div>
</div>
`;

exports[`Download page should handle LTS to Current switch 1`] = `
<div>
  <div
    class="layout-container"
  >
    <nav
      aria-label="Primary"
      class="nav"
    >
      <div
        class="nav__container"
      >
        <div
          class="nav__startwrapper"
        >
          <a
            aria-label="Homepage"
            href="/"
          >
            <div
              class="logo"
            >
              <svg
                class="nav__logo light-mode-only"
              />
              <svg
                class="nav__logo dark-mode-only"
              />
            </div>
          </a>
        </div>
        <ul
          class="nav__tabs__container"
        >
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="/learn"
            >
              Learn
            </a>
          </li>
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="https://nodejs.org/en/docs/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Documentation
            </a>
          </li>
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="/download"
            >
              Download
            </a>
          </li>
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="/community"
            >
              Community
            </a>
          </li>
        </ul>
        <div
          class="nav__endwrapper"
        >
          <ul
            class="right-container"
          >
            <li
              class="nav__tabs"
            >
              <div
                class="searchBarContainer"
                style="min-height: 3em; width: 100%; max-width: 7em; box-shadow: none;"
              >
                <div
                  class="searchInputContainer"
                >
                  <i
                    class="material-icons searchIcon"
                  >
                    search
                  </i>
                  <label
                    for="searchInput"
                  >
                    Search
                    <input
                      autocomplete="off"
                      class="inputText"
                      id="searchInput"
                      name="query"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
              </div>
            </li>
            <li
              class="nav__tabs nav__tabs--right"
            >
              <button
                class="dark-mode-toggle"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  Toggle Dark Mode
                </span>
                <i
                  class="material-icons light-mode-only theme-buttons"
                >
                  nights_stay
                </i>
                <i
                  class="material-icons dark-mode-only theme-buttons"
                >
                  wb_sunny
                </i>
              </button>
            </li>
            <li
              class="nav__tabs"
            >
              <a
                href="https://github.com/nodejs/nodejs.dev"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="sr-only"
                >
                  GitHub
                </span>
                <svg
                  fill="var(--color-text-accent)"
                  style="margin-bottom: -3px;"
                />
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <span
      class="home-page -download"
    >
      <div
        class="download-page__navigation"
      >
        <div>
          HOME /
          <span
            class="download-page__navigation--active"
          >
             downloads
          </span>
        </div>
        <div>
          CURRENT
           VERSION 
        </div>
      </div>
      <div
        class="download-page__navigation"
      >
        <div
          class="download-page__navigation--title"
        >
          Downloads
        </div>
        <div
          class="download-page__navigation--npm"
        >
          (includes npm 
          )
        </div>
      </div>
      <p
        class="release-description"
      >
        Download the Node.js source code, a pre-built installer for your platform, or install via
         
        <a
          href="/download/package-manager"
        >
          package manager
        </a>
        .
      </p>
      <div
        class="download-toogle"
      >
        <div
          class="download-toogle__selector"
        >
          <div
            class="download-toogle__switch"
          >
            <button
              aria-checked="false"
              aria-label="Show LTS versions"
              class="download-toogle__button"
              role="switch"
              type="button"
            >
              LTS
            </button>
            <button
              aria-checked="false"
              aria-label="Show LTS versions"
              class="download-toogle__button -current -active"
              role="switch"
              type="button"
            >
              Current
            </button>
          </div>
        </div>
        <p
          class="download-toogle__description"
        >
          With the latest features
        </p>
      </div>
      <div
        class="download-cards-wrapper"
        data-rttabs="true"
        tabindex="-1"
      >
        <ul
          class="download-cards"
          role="tablist"
        >
          <li
            aria-controls="paneldownload-card-WIN"
            aria-disabled="false"
            aria-selected="false"
            class="download-card"
            data-rttab="true"
            id="tabdownload-card-WIN"
            role="tab"
            tabindex="0"
          >
            <div
              class="download-card__top"
            >
              <svg
                class="download-card__image"
              />
            </div>
            <p
              class="download-card__label"
            >
              Windows Installer
            </p>
            <p
              class="download-card__filename"
            >
              node-undefined-x86.msi
            </p>
          </li>
          <li
            aria-controls="paneldownload-card-MAC"
            aria-disabled="false"
            aria-selected="false"
            class="download-card"
            data-rttab="true"
            id="tabdownload-card-MAC"
            role="tab"
            tabindex="0"
          >
            <div
              class="download-card__top"
            >
              <svg
                class="download-card__image"
              />
            </div>
            <p
              class="download-card__label"
            >
              MAC Installer
            </p>
            <p
              class="download-card__filename"
            >
              node-undefined.pkg
            </p>
          </li>
          <li
            aria-controls="paneldownload-card-SOURCECODE"
            aria-disabled="false"
            aria-selected="false"
            class="download-card download-card--active"
            data-rttab="true"
            id="tabdownload-card-SOURCECODE"
            role="tab"
            tabindex="0"
          >
            <div
              class="download-card__top"
            >
              <svg
                class="download-card__image"
              />
              <a
                class="download-card__link"
                href="https://nodejs.org/dist/undefined/node-undefined.tar.gz"
              >
                <i
                  class="material-icons"
                >
                  get_app
                </i>
              </a>
            </div>
            <p
              class="download-card__label"
            >
              Source Code
            </p>
            <p
              class="download-card__filename"
            >
              node-undefined.tar.gz
            </p>
          </li>
        </ul>
      </div>
      <div
        class="download-releases"
      >
        <h2
          class="download-releases__title"
        >
          Upcoming Releases
        </h2>
        <div
          class="upcoming-releases"
        >
          <div
            class="react-tabs"
            data-rttabs="true"
          >
            <ul
              class="react-tabs__tab-list"
              role="tablist"
            >
              <li
                aria-controls="panel:r3:0"
                aria-disabled="false"
                aria-selected="true"
                class="react-tabs__tab react-tabs__tab--selected"
                data-rttab="true"
                id="tab:r3:0"
                role="tab"
                tabindex="0"
              >
                Node.js 
                v12
              </li>
              <li
                aria-controls="panel:r3:1"
                aria-disabled="false"
                aria-selected="false"
                class="react-tabs__tab"
                data-rttab="true"
                id="tab:r3:1"
                role="tab"
              >
                Node.js 
                v14
              </li>
            </ul>
            <div
              aria-labelledby="tab:r3:0"
              class="react-tabs__tab-panel react-tabs__tab-panel--selected"
              id="panel:r3:0"
              role="tabpanel"
            >
              <div
                class="upcoming-releases__panel"
              >
                <div
                  class="upcoming-releases__item--Current"
                >
                  <svg />
                  <p
                    class="release-title"
                  >
                    Current
                  </p>
                  <p
                    class="release-date"
                  >
                    Released
                     
                    2019-04-23
                  </p>
                </div>
                <div
                  class="upcoming-releases__item--LTS"
                >
                  <svg />
                  <p
                    class="release-title"
                  >
                    LTS
                  </p>
                  <p
                    class="release-date"
                  >
                    Released
                     
                    2019-10-21
                  </p>
                </div>
                <div
                  class="upcoming-releases__item--Maintenance"
                >
                  <svg />
                  <p
                    class="release-title"
                  >
                    Maintenance
                  </p>
                  <p
                    class="release-date"
                  >
                    Released
                     
                    2020-11-30
                  </p>
                </div>
                <div
                  class="upcoming-releases__item--End-of-life"
                >
                  <svg />
                  <p
                    class="release-title"
                  >
                    End-of-life
                  </p>
                  <p
                    class="release-date"
                  >
                    Released
                     
                    2022-04-30
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="tab:r3:1"
              class="react-tabs__tab-panel"
              id="panel:r3:1"
              role="tabpanel"
            />
          </div>
        </div>
        <p
          class="lts__text"
        >
          Major Node.js versions enter Current release status for six months, which gives library authors time to add support for them. After six months, odd-numbered releases (9, 11, etc.) become unsupported, and even-numbered releases (10, 12, etc.) move to Active LTS status and are ready for general use. LTS release status is "long-term support", which typically guarantees that critical bugs will be fixed for a total of 30 months. Production applications should only use Active LTS or Maintenance LTS releases.
        </p>
        <div
          class="downloads-table-container"
        >
          <table
            class="downloads-table"
          >
            <thead>
              <tr>
                <th>
                  Release
                </th>
                <th>
                  Status
                </th>
                <th>
                  Codename
                </th>
                <th>
                  Initial Release
                </th>
                <th>
                  Active LTS Start
                </th>
                <th>
                  Maintenance LTS Start
                </th>
                <th>
                  End of Life
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  <a
                    href="https://nodejs.org/download/release/latest-v12.x/"
                  >
                    v12
                  </a>
                </td>
                <td>
                  Maintenance LTS
                </td>
                <td>
                  <a
                    href="https://nodejs.org/download/release/latest-erbium/"
                  >
                    Erbium
                  </a>
                </td>
                <td>
                  2019-04-23
                </td>
                <td>
                  2019-10-21
                </td>
                <td>
                  2020-11-30
                </td>
                <td>
                  2022-04-30
                </td>
              </tr>
              <tr>
                <td>
                  <a
                    href="https://nodejs.org/download/release/latest-v14.x/"
                  >
                    v14
                  </a>
                </td>
                <td>
                  Active LTS
                </td>
                <td>
                  <a
                    href="https://nodejs.org/download/release/latest-fermium/"
                  >
                    Fermium
                  </a>
                </td>
                <td>
                  2020-04-21
                </td>
                <td>
                  2020-10-27
                </td>
                <td>
                  2021-10-19
                </td>
                <td>
                  2023-04-30
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="download-additional"
      >
        <div
          class="download-additional__header"
        >
          <h3
            class="download-additional__title"
          >
            Additional Downloads
          </h3>
          <div
            class="download-toogle"
          >
            <div
              class="download-toogle__selector"
            >
              <div
                class="download-toogle__switch"
              >
                <button
                  aria-checked="false"
                  aria-label="Show LTS versions"
                  class="download-toogle__button"
                  role="switch"
                  type="button"
                >
                  LTS
                </button>
                <button
                  aria-checked="false"
                  aria-label="Show LTS versions"
                  class="download-toogle__button -current -active"
                  role="switch"
                  type="button"
                >
                  Current
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="download-additional__body"
        />
      </div>
    </span>
    <footer
      class="footer"
    >
      <ul
        class="footer__left"
      >
        <li>
          <a
            class="footer__link"
            href="/about/trademark"
          >
            Trademark Policy
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="/about/privacy"
          >
            Privacy Policy
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="https://github.com/openjs-foundation/cross-project-council/blob/main/CODE_OF_CONDUCT.md#contributor-covenant-code-of-conduct"
          >
            Code of Conduct
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="/about/security"
          >
            Security Reporting
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="/about"
          >
            About
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="https://nodejs.org/en/blog/"
          >
            Blog
          </a>
        </li>
      </ul>
      <ul
        class="footer__right"
      >
        <li>
          © OpenJS Foundation
        </li>
        <li>
          <a
            aria-label="Node.js Github Page Link"
            href="https://github.com/nodejs/node"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="sr-only"
            >
              GitHub
            </span>
            <svg
              fill="var(--color-text-secondary)"
            />
          </a>
        </li>
        <li>
          <a
            aria-label="Node.js Twitter Link"
            href="https://twitter.com/nodejs"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              fill="var(--color-text-secondary)"
            />
          </a>
        </li>
        <li>
          <a
            aria-label="Node.js Slack Link"
            href="https://slack.openjsf.org"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              fill="var(--color-text-secondary)"
            />
          </a>
        </li>
      </ul>
    </footer>
  </div>
</div>
`;
